--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             padding: 0;
             overflow: hidden;
         }
+        .night-mode {
+            position: absolute;
+            top: 10px;
+            right: 70px;
+            color: #888;
+            font: 11px -apple-system,BlinkMacSystemFont,
+                Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,
+                Fira Sans,Droid Sans,Helvetica Neue,
+                sans-serif
+        }
     </style>
 </head>
 
@@ -24,31 +34,44 @@
 <body>
     <div id="app">
         <trading-vue :data="data" :width="this.width" :height="this.height"
+            :toolbar="true"
+            :chart-config="{TB_ICON_BRI: 1.9}"
             :color-back="colors.colorBack"
             :color-grid="colors.colorGrid"
             :color-text="colors.colorText">
+        </trading-vue>
+        <span class="night-mode">
+            <input type="checkbox" v-model="night">
+            <label>NM</label>
+        </span>
     </div>
     <script>
         app = new Vue({
             el: '#app',
             data: {
-                data: Data,
+                data: new TradingVueJs.DataCube(Data),
                 width: window.innerWidth,
                 height: window.innerHeight,
-                colors: {
-                    colorBack: '#fff',
-                    colorGrid: '#eee',
-                    colorText: '#333',
-                }
+                night: true
             },
             mounted() {
                 window.addEventListener('resize', this.onResize)
+                window.DataCube = this.data
             },
             methods: {
                 onResize(event) {
                     this.width = window.innerWidth
                     this.height = window.innerHeight
                 }
+            },
+            computed: {
+                colors() {
+                    return this.night ? {} : {
+                        colorBack: '#fff',
+                        colorGrid: '#eee',
+                        colorText: '#333'
+                    }
+                },
             },
             beforeDestroy() {
                 window.removeEventListener('resize', this.onResize)
