--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>TradingVueJs Demo</title>
     <script src="https://unpkg.com/vue"></script>
     <script src="./trading-vue.min.js"></script>
@@ -35,7 +35,7 @@
     <div id="app">
         <trading-vue :data="data" :width="this.width" :height="this.height"
             :toolbar="true"
-            :chart-config="{TB_ICON_BRI: 1.9}"
+            :chart-config="{TB_ICON_BRI: 1.25}"
             :color-back="colors.colorBack"
             :color-grid="colors.colorGrid"
             :color-text="colors.colorText">
