--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>TradingVueJs Demo</title>
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue@2.6.12/dist/vue.min.js"></script>
     <script src="./trading-vue.min.js"></script>
     <script src="./data.json"></script>
     <style>
